PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/AsyncFunctionExists.pf
module AsyncFunctionExists {

    fun getInt() : Int {
        return 1
    }

    fun testSomething() : Int {
        i Int = async getInt()
         
        return i
    }
}