PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/AsyncFunctionExists.pf
module AsyncFunctionExists {



    fun testSomething() : Int {
        i Int = async getInt()
         
        return i
    }
}